--- a/app/src/main/res/layout/service_activity.xml
+++ b/app/src/main/res/layout/service_activity.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBarGuestService"
+        android:id="@+id/progressServiceBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -27,7 +27,7 @@
         android:visibility="gone"/>
 
     <ScrollView
-        android:id="@+id/guestServiceMainScroll"
+        android:id="@+id/mainServiceScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
@@ -44,14 +44,14 @@
             android:orientation="vertical">
             <!-- Верхняя часть весь текст: цена, название, рейтинг-->
             <LinearLayout
-                android:id="@+id/guestLinearLayout"
+                android:id="@+id/mainServiceLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:id="@+id/ratingGuestServiceLayout"
+                    android:id="@+id/ratingServiceLayout"
                     style="@style/block"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
                         android:text="Рейтинг: " />
 
                     <TextView
-                        android:id="@+id/withoutRatingText"
+                        android:id="@+id/withoutRatingServiceText"
                         style="@style/mainText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                         android:text="Оценок еще нет" />
 
                     <RatingBar
-                        android:id="@+id/ratingBarGuestServiceRatingBar"
+                        android:id="@+id/ratingServiceBar"
                         style="@android:style/Widget.Holo.RatingBar.Small"
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
@@ -92,14 +92,14 @@
                         android:visibility="gone" />
 
                     <TextView
-                        android:id="@+id/avgRatingGuestServiceElementText"
+                        android:id="@+id/ratingServiceText"
                         style="@style/defaultText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp" />
 
                     <TextView
-                        android:id="@+id/countOfRatesGuestServiceElementText"
+                        android:id="@+id/countOfRatesServiceText"
                         style="@style/defaultText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -113,7 +113,7 @@
                     android:background="@drawable/block_text">
 
                     <TextView
-                        android:id="@+id/costGuestServiceText"
+                        android:id="@+id/costServiceText"
                         style="@style/mainText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
@@ -126,7 +126,7 @@
                     android:background="@drawable/block_text">
 
                     <TextView
-                        android:id="@+id/addressGuestServiceText"
+                        android:id="@+id/addressServiceText"
                         style="@style/mainText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -149,7 +149,7 @@
                         android:text="Описание:" />
 
                     <TextView
-                        android:id="@+id/descriptionGuestServiceText"
+                        android:id="@+id/descriptionServiceText"
                         style="@style/defaultText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -213,7 +213,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/guestLinearLayout">
+                app:layout_constraintTop_toBottomOf="@+id/mainServiceLayout">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -228,7 +228,7 @@
                         android:layout_weight="2">
 
                         <LinearLayout
-                            android:id="@+id/feedGuestServiceLayout"
+                            android:id="@+id/imagesServiceLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
