--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -8,7 +8,7 @@
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.searchService.MainScreenActivity">
 
     <LinearLayout
-        android:id="@+id/headerMainScreenLayout"
+        android:id="@+id/topMainScreenLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -133,13 +133,13 @@
         android:layout_height="0dp"
         android:layout_margin="10dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/footerMainScreenLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomMainScreenLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tagsMainScreenLayout" />
 
     <LinearLayout
-        android:id="@+id/footerMainScreenLayout"
+        android:id="@+id/bottomMainScreenLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bottom_panel_height"
         android:orientation="horizontal"
