--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -108,6 +108,7 @@
                         android:background="@color/white"
                         android:visibility="gone"
                         android:text="TextView" />
+
                 </LinearLayout>
             </LinearLayout>
 
@@ -152,8 +153,18 @@
                     android:layout_height="@dimen/main_button_height"
                     android:layout_gravity="start"
                     android:layout_marginEnd="10dp"
-                    android:text="@string/addServices"
+                    android:text="Подписки"
                     android:visibility="invisible" />
+
+                <Button
+                    android:id="@+id/dialogsProfileBtn"
+                    style="@style/smallMainButtonOther"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/main_button_height"
+                    android:layout_gravity="start"
+                    android:layout_marginEnd="10dp"
+                    android:text="Диалог"
+                    android:visibility="gone" />
 
                 <!--<LinearLayout
                     android:id="@+id/subscriptionsProfileLayout"
