--- a/app/src/main/res/layout/subscribers.xml
+++ b/app/src/main/res/layout/subscribers.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="gone"
-            style="@style/mainText"
+            style="@style/mainBlockText"
             android:text="У вас пока нет подписок" />
 
         <ProgressBar
