--- a/app/src/main/res/layout/authorization.xml
+++ b/app/src/main/res/layout/authorization.xml
@@ -40,7 +40,7 @@
             android:layout_marginEnd="10dp"
             android:background="@color/panelColor"
             android:popupBackground="@color/panelColor"
-            style="@style/mainText"
+            style="@style/mainBlockText"
             android:entries="@array/countryCode" />
 
         <EditText
