--- a/app/src/main/res/layout/bottom_panel.xml
+++ b/app/src/main/res/layout/bottom_panel.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/bottom_panel_height"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="@color/panelColor"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/profileBottomPanelText"
-        style="@style/textItemRegular"
+        style="@style/iconRegular"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -18,7 +19,7 @@
 
     <TextView
         android:id="@+id/mainScreenBottomPanelText"
-        style="@style/textItemSolid"
+        style="@style/iconSolid"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -29,7 +30,7 @@
 
     <TextView
         android:id="@+id/chatBottomPanelText"
-        style="@style/textItemRegular"
+        style="@style/iconRegular"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
