--- a/app/src/main/res/layout/category_element.xml
+++ b/app/src/main/res/layout/category_element.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <TextView
-            style="@style/mainText"
+            style="@style/mainBlockText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -67,7 +67,7 @@
         android:visibility="gone">
 
         <TextView
-            style="@style/mainText"
+            style="@style/mainBlockText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
