--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -8,7 +8,7 @@
     style="@style/allPages">
 
     <LinearLayout
-        android:id="@+id/headerDialogsLayout"
+        android:id="@+id/topPanelDialogsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -21,11 +21,11 @@
         android:layout_height="wrap_content"
         android:text="Нет диалогов"
         android:visibility="gone"
-        style="@style/mainText"
-        app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
+        style="@style/mainBlockText"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanelDialogsLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout"/>
+        app:layout_constraintTop_toBottomOf="@+id/topPanelDialogsLayout"/>
 
     <ProgressBar
         android:id="@+id/progressBarDialogs"
@@ -33,10 +33,10 @@
         android:layout_height="wrap_content"
         android:indeterminateTint= "@color/panelColor"
         android:layout_gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanelDialogsLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout"/>
+        app:layout_constraintTop_toBottomOf="@+id/topPanelDialogsLayout"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsDialogsRecycleView"
@@ -44,16 +44,16 @@
         android:layout_height="0dp"
         android:scrollbars="none"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/headerDialogsLayout"
-        app:layout_constraintBottom_toTopOf="@+id/footerDialogsLayout"
+        app:layout_constraintTop_toBottomOf="@+id/topPanelDialogsLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanelDialogsLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
-        android:id="@+id/footerDialogsLayout"
+        android:id="@+id/bottomPanelDialogsLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_panel_height"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent">
     </LinearLayout>
