--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -77,7 +77,7 @@
 
                 <EditText
                     android:id="@+id/nameEditProfileInput"
-                    style="@style/mainText"
+                    style="@style/mainBlockText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
@@ -93,7 +93,7 @@
 
                 <EditText
                     android:id="@+id/surnameEditProfileInput"
-                    style="@style/mainText"
+                    style="@style/mainBlockText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/transparent"
@@ -108,7 +108,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    style="@style/mainText"
+                    style="@style/mainBlockText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -133,7 +133,7 @@
 
                 <Spinner
                     android:id="@+id/codeEditProfileSpinner"
-                    style="@style/mainText"
+                    style="@style/mainBlockText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -141,7 +141,7 @@
 
                 <EditText
                     android:id="@+id/phoneEditProfileInput"
-                    style="@style/mainText"
+                    style="@style/mainBlockText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
@@ -160,7 +160,7 @@
 
             <EditText
                 android:id="@+id/codeEditProfileInput"
-                style="@style/mainText"
+                style="@style/mainBlockText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
