--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -141,7 +141,7 @@
     <LinearLayout
         android:id="@+id/bottomMainScreenLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_panel_height"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
