--- a/app/src/main/res/layout/review.xml
+++ b/app/src/main/res/layout/review.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toBottomOf="@+id/headerReviewLayout">
 
         <TextView
-            style="@style/mainText"
+            style="@style/mainBlockText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,7 +50,7 @@
 
             <EditText
                 android:id="@+id/reviewReviewInput"
-                style="@style/mainText"
+                style="@style/mainBlockText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
