--- a/app/src/main/res/layout/subscription_element.xml
+++ b/app/src/main/res/layout/subscription_element.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/workerNameSubscriptionElementText"
-        style="@style/mainText"
+        style="@style/mainBlockText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -40,7 +40,7 @@
 
     <TextView
         android:id="@+id/unsubscribeSubscriptionElementText"
-        style="@style/textItemRegular"
+        style="@style/iconRegular"
         android:layout_width="60dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
