--- a/app/src/main/res/layout/top_panel.xml
+++ b/app/src/main/res/layout/top_panel.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/backTopPanelText"
-        style="@style/textItemSolid"
+        style="@style/iconSolid"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -28,7 +28,7 @@
 
     <TextView
         android:id="@+id/settingTopPanelText"
-        style="@style/textItemSolid"
+        style="@style/iconSolid"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -68,7 +68,7 @@
 
         <TextView
             android:id="@+id/subscribeTopPanelText"
-            style="@style/textItemSolid"
+            style="@style/iconSolid"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -78,7 +78,7 @@
 
         <TextView
             android:id="@+id/unsubscribeTopPanelText"
-            style="@style/textItemRegular"
+            style="@style/iconRegular"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
