--- a/app/src/main/res/layout/top_panel_k.xml
+++ b/app/src/main/res/layout/top_panel_k.xml
@@ -3,30 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="@color/panelColor"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/backTopPanelText"
-        style="@style/textItemSolid"
+        style="@style/iconSolid"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_weight="1"
         android:gravity="center"
-        android:visibility="invisible"
+        android:layout_weight="0.3"
         android:text="@string/back_ico" />
 
     <TextView
         android:id="@+id/titleTopPanelText"
         style="@style/myTitle"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="center"
-        android:visibility="gone"
+        android:gravity="start"
         android:text="Заголовок" />
 
     <ImageView
@@ -40,13 +39,13 @@
 
     <TextView
         android:id="@+id/multiTopPanelText"
-        style="@style/textItemSolid"
+        style="@style/iconSolid"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_gravity="end"
         android:layout_weight="1"
-        android:gravity="center"
-        android:visibility="gone" />
+        android:paddingEnd="10dp"
+        android:gravity="end" />
 
     <LinearLayout
         android:id="@+id/avatarTopPanelLayout"
